# stori

./: LEADERSHIP_CHALLENGE.md  docker-compose.yml
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart  theme.dart
python_backend/services/authentication/: alembic.ini  api.Dockerfile  app.py  grpc.Dockerfile  grpc_server.py  pyproject.toml  run.py  utils.py
python_backend/services/authentication/alembic/: env.py
python_backend/services/authentication/clients/: cache.py  token.py
python_backend/services/authentication/models/: __init__.py  user.py
python_backend/services/authentication/scripts/: env.py
python_backend/services/authentication/scripts/versions/: 3b7dd1509ef4_add_users_table.py  ec129c5299a1_initial_migration.py
python_backend/services/authentication/services/auth/: routes.py  serializers.py  service.proto  service_pb2.py  service_pb2_grpc.py
python_backend/services/authentication/services/user/: serializers.py  services.py
python_backend/services/contacts/: .gitignore  Dockerfile  env.example  pyproject.toml
python_backend/services/contacts/apps/: auth.proto  auth_pb2.py  auth_pb2_grpc.py  common.py  grpc_client.py  middleware.py  seed.py
python_backend/services/contacts/apps/contacts/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
python_backend/services/contacts/apps/contacts/migrations/: 0001_initial.py  0002_rename_user_contact_user_id.py  0003_alter_contact_user_id.py
python_backend/services/contacts/config/: urls.py  wsgi.py
python_backend/services/contacts/config/settings/: base.py  ci.py  conftest.py  local.py
python_backend/services/contacts/templates/: base.html
(+23 files in other folders)
