[tool.poetry]
name = "authentication"
version = "0.1.0"
description = ""
authors = ["Gabriel Garcia <ygabo@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
