[tool.poetry]
name = "authentication"
version = "0.1.0"
description = ""
authors = ["Gabriel Garcia <ygabo@pm.me>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
pydantic = "^2.7.3"
alembic = "^1.13.1"
flask-restful = "^0.3.10"
flask-cors = "^4.0.1"
marshmallow = "^3.21.2"
flask-marshmallow = "^1.2.1"
pyjwt = "^2.8.0"
redis = "^5.0.4"
flask-restx = "^1.3.0"
marshmallow-sqlalchemy = "^1.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
